verisión mejorada y más linda

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 		<title>[title]</title>
 		<!--
-			<link rel="stylesheet" type="text/css" href="../assets/css/ejemplo.css">
-			
-			Esta sería la fomrma básica de incluir un JS [JavaScript]
-			Solamente hay que cambiar el nombre del archivo por el que corresponde,
-			tener en cuenta de que puede estar incluído dentro de otras carpetas.
+			Esta sería la fomrma básica de incluir un JS [JavaScript]:
+			La etiqueta [project] sólo tiene relevancia solamente en este proyecto
+
+			<link rel="stylesheet" type="text/css" href="[project]/assets/css/ejemplo.css">
 		-->
-		<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap-4.1.1/bootstrap.min.css">
+        <link rel="icon" type="image/x-icon" href="[project]/favicon.ico" />
 	</head>
 	<body>
+		[header]
 		[body]
+		[footer]
 		<!--
-			<script type="text/javascript" src="../assets/js/ejemplo.js"></script>
-			
-			Esta sería la fomrma básica de incluir un CSS [Cascade Style Sheets]
-			Solamente hay que cambiar el nombre del archivo por el que corresponde,
-			tener en cuenta de que puede estar incluído dentro de otras carpetas.
+			Esta sería la fomrma básica de incluir un CSS [Cascade Style Sheets]:
+			La etiqueta [project] sólo tiene relevancia solamente en este proyecto
+
+			<script type="text/javascript" src="[project]/assets/js/ejemplo.js"></script>
 		-->
-		<script type="text/javascript" src="../assets/js/jquery-3.3.1.min.js"></script>
-		<script type="text/javascript" src="../assets/js/popper-1.14.3.min.js"></script>
-		<script type="text/javascript" src="../assets/js/bootstrap-4.1.1/bootstrap.min.js"></script>
 	</body>
 </html>
